--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name" : "gos/helloworld",
+	"name" : "cuicui/magento-2-helloworld",
 	"description" : "gos",
 	"type" : "magento2-module",
 	"version" : "1.0.0",
