--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description" : "gos",
 	"type" : "magento2-module",
 	"version" : "1.0.0",
-	"minimum-stability" : "stable",
+	"minimum-stability" : "dev",
 	"license" : [
 		"OSL-3.0",
 		"AFL-3.0"
