--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 			"registration.php"
 		],
 		"psr-4" : {
-			"Gos\\Hellworld\\" : ""
+			"Gos\\Helloworld\\" : ""
 		}
 	},
 	"autoload-dev" : {
